Mon Mar  3 09:07:56 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* ports.c (scm_char_ready_p): bug fix: in SCM_PROC char-ready's
 	argument wasn't declared to be optional.

Sun Mar  2 16:34:40 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* stime.c (scm_init_stime): Add feature "current-time".

Sun Mar  2 06:37:31 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* throw.h: prototype for scm_exit_status.
	* throw.c (scm_handle_by_message): if a 'quit is caught, use its
	args to derive an exit status.  Allows (quit) to work from a
	script.
	(scm_exit_status): new function.
	#include "eq.h".

Sat Mar  1 00:09:15 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* eval.c (scm_deval): Removed some old code.
	(ENTER_APPLY): Bugfix: Reset apply-frame trap on trap as is done
	with the others.
	(ENTER_APPLY, scm_deval): Reset trace flag on apply-frame and
	exit-frame traps.

	* symbols.c (msymbolize): Bugfix: Must initialize property list to
 	SCM_EOL.

	* procs.c: Introduce the existent C function scm_thunk_p at the
	Scheme level as well.

Wed Feb 26 12:53:58 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* symbols.c, symbols.h (scm_symbol_value0): New function.  Can be
 	used from C to easily lookup the value of a symbol in the current
 	module.

Tue Feb 25 00:14:10 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* unif.c (scm_init_unif): Added #include "unif.x".  (There are two
	scm_init_unif in this file.  This will also fix a previous problem
	with guile-snarf.)

	* configure.in: Added AM_MAINTAINER_MODE

Fri Feb 21 23:07:26 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gdb_interface.h (GDB_INTERFACE): Added some (void *) casts to
	avoid warnings.

Fri Feb 21 18:00:38 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_libguile_la_SOURCES): New variable to hold
 	source files that are not always included in libguile but should
 	have their dependencies calculated by automake.  This variable is
 	recognized by automake, no further magic is needed.